# Kelly-AI

./: main.py  pyproject.toml
agents/: chat_agent.py  desk_agent.py  system_prompt.py
audio/: stt.py  tts.py
tools/: app_tool.py  browser_tool.py  desktop_tool.py
